@@ -430,6 +430,8 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
             DOM.RESTfull.save(lDir + lName + lType, null, CloudCommander.refresh);
     };
     
+    
+    
     /**
      * delete currentfile, prompt before it
      *
@@ -439,15 +441,20 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
         var lRet,
             lCurrent,
             lName,
-            lMsg = 'Are you sure thet you want delete ';
+            lMsg = 'Are you sure thet you want delete ',
+            lSelected = DOM.getSelectedFiles();
         
-        /* dom element passed and it is not event */
-        if( Util.isObject(pCurrentFile) && !pCurrentFile.type)
-            lCurrent = pCurrentFile;
-        else
-            lCurrent = DOM.getCurrentFile();
+        if(lSelected){
             
-        lName = DOM.getCurrentName(lCurrent);
+        }else{
+            /* dom element passed and it is not event */
+            if( pCurrentFile && !pCurrentFile.pType)
+                lCurrent = pCurrentFile;
+            else
+                lCurrent = DOM.getCurrentFile();
+            
+            lName = DOM.getCurrentName(lCurrent);
+        }
         
         lRet  = confirm(lMsg + lName + '?');
         
@@ -1013,14 +1020,14 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * get size
      * @pCurrentFile
      */
-    DOM.loadCurrentSize          = function(pCallBack, pCurrentFile){
+    DOM.loadCurrentSize          = function(pCallBack, pCurrent){
         var lRet,
-            lLink = DOM.getCurrentPath(pCurrentFile);
+            lLink = DOM.getCurrentPath(pCurrent);
             /* если это папка - возвращаем слово dir вместо размера*/
         
         DOM.RESTfull.read(lLink, function(pSize){
-            DOM.setCurrentSize(pSize, pCurrentFile);
-            Util.exec(pCallBack);
+            DOM.setCurrentSize(pSize, pCurrent);
+            Util.exec(pCallBack, pCurrent);
         }, '?size');
         
         return lRet;
@@ -1318,6 +1325,18 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
            lLink = lLink.title || lLink.textContent;
         
         return lLink;
+    };
+    
+    DOM.getSelectedNames        = function(pSelected){
+        var lSelected   = pSelected || DOM.getSelectedFiles(),
+            lRet        = lSelected ? [] : null;
+            
+        
+        if(lRet)
+            for(var i = 0, n = lSelected.length; i < n;i++)
+                lRet[i] = DOM.getCurrentName( lSelected[i] );
+        
+        return lRet;
     };
     
     /**
