@@ -68,7 +68,7 @@ var CloudCommander, Util, DOM;
         
         var key_event   = function(pEvent){
                 /* получаем выдленный файл*/
-                var i, n, lCurrentFile = DOM.getCurrentFile();
+                var i, n, lCurrent = DOM.getCurrentFile();
                 /* если клавиши можно обрабатывать*/
                 if(keyBinded && pEvent){
                     var lKeyCode    = pEvent.keyCode,
@@ -100,7 +100,7 @@ var CloudCommander, Util, DOM;
                                 var lPanel = DOM.getPanel(),
                                     lId = lPanel.id;
                                 
-                                lTabPanel[lId] = lCurrentFile;
+                                lTabPanel[lId] = lCurrent;
                                 
                                 lPanel = DOM.getPanel({active:false});
                                 lId = lPanel.id;
@@ -117,23 +117,23 @@ var CloudCommander, Util, DOM;
                                 break;
                             
                             case KEY.INSERT:
-                                DOM.setSelectedFile(lCurrentFile);
-                                DOM.setCurrentFile( lCurrentFile.nextSibling );
+                                DOM.setSelectedFile( lCurrent );
+                                DOM.setCurrentFile( lCurrent.nextSibling );
                                 break;
                             
                             case KEY.DELETE:
                                 if(lShift){
-                                    var lUrl = DOM.getCurrentPath(lCurrentFile);
+                                    var lUrl = DOM.getCurrentPath(lCurrent);
                                     
-                                    if( DOM.isCurrentIsDir(lCurrentFile) )
+                                    if( DOM.isCurrentIsDir(lCurrent) )
                                         lUrl += '?dir';
                                     
                                     DOM.RESTfull.delete(lUrl, function(){
-                                        DOM.deleteCurrent(lCurrentFile);
+                                        DOM.deleteCurrent(lCurrent);
                                     });
                                 }
                                 else
-                                    DOM.promptDeleteCurrent(lCurrentFile);
+                                    DOM.promptDeleteCurrent(lCurrent);
                                 break;
                             
                             case KEY.F1:
@@ -141,7 +141,7 @@ var CloudCommander, Util, DOM;
                                 break;
                             
                             case KEY.F2:
-                                DOM.renameCurrent(lCurrentFile);
+                                DOM.renameCurrent(lCurrent);
                                 break;
                                 
                             case KEY.F3:
@@ -158,12 +158,12 @@ var CloudCommander, Util, DOM;
                                 break;
                             
                             case KEY.F5:
-                                DOM.copyCurrent(lCurrentFile);
+                                DOM.copyCurrent(lCurrent);
                                 DOM.preventDefault(pEvent);
                                 break;
                             
                             case KEY.F6:
-                                DOM.moveCurrent(lCurrentFile);
+                                DOM.moveCurrent(lCurrent);
                                 DOM.preventDefault(pEvent);
                                 break;
                             
@@ -172,7 +172,7 @@ var CloudCommander, Util, DOM;
                                 break;
                             
                             case KEY.F:
-                                DOM.promptDeleteCurrent(lCurrentFile);
+                                DOM.promptDeleteCurrent(lCurrent);
                                 break;
                             
                             case KEY.F10:
@@ -188,16 +188,16 @@ var CloudCommander, Util, DOM;
                                 break;
                                 
                             case KEY.SPACE:
-                                var lSelected   = DOM.isSelected(lCurrentFile),
-                                    lDir        = DOM.isCurrentIsDir(lCurrentFile);
+                                var lSelected   = DOM.isSelected(lCurrent),
+                                    lDir        = DOM.isCurrentIsDir(lCurrent);
                                 
                                 if(!lDir)
                                     lSelected = true;
                                     
                                 Util.ifExec(lSelected, function(){
-                                    DOM.setSelectedFile(lCurrentFile);
+                                    DOM.setSelectedFile(lCurrent);
                                 }, function(pCallBack){
-                                    DOM.loadCurrentSize(pCallBack, lCurrentFile);
+                                    DOM.loadCurrentSize(pCallBack, lCurrent);
                                 });
 
                                 
@@ -209,9 +209,9 @@ var CloudCommander, Util, DOM;
                              * выделяем предыдущую строку   */
                             case KEY.UP:
                                 if(lShift)
-                                     DOM.setSelectedFile(lCurrentFile);
+                                     DOM.setSelectedFile(lCurrent);
                                 
-                                DOM.setCurrentFile( lCurrentFile.previousSibling );
+                                DOM.setCurrentFile( lCurrent.previousSibling );
                                 DOM.preventDefault( pEvent );
                                 break;
                             
@@ -219,9 +219,9 @@ var CloudCommander, Util, DOM;
                              * выделяем следующую строку    */
                             case KEY.DOWN:
                                 if(lShift)
-                                     DOM.setSelectedFile(lCurrentFile);
+                                     DOM.setSelectedFile(lCurrent);
                                 
-                                DOM.setCurrentFile( lCurrentFile.nextSibling );
+                                DOM.setCurrentFile( lCurrent.nextSibling );
                                 DOM.preventDefault( pEvent );
                                 break;
                             
@@ -229,14 +229,14 @@ var CloudCommander, Util, DOM;
                              * переходим к самому верхнему  *
                              * элементу                     */
                             case KEY.HOME:
-                                DOM.setCurrentFile( lCurrentFile.parentElement.firstChild );
+                                DOM.setCurrentFile( lCurrent.parentElement.firstChild );
                                 DOM.preventDefault(pEvent);
                                 break;
                             
                             /* если нажали клавишу End
                              * выделяем последний элемент   */
                             case KEY.END:
-                                DOM.setCurrentFile( lCurrentFile.parentElement.lastElementChild );
+                                DOM.setCurrentFile( lCurrent.parentElement.lastElementChild );
                                 DOM.preventDefault( pEvent );
                                 break;
                             
@@ -246,11 +246,11 @@ var CloudCommander, Util, DOM;
                                 DOM.scrollByPages( DOM.getPanel(), 1 );
                                 
                                 for(i=0; i<30; i++){
-                                    if(!lCurrentFile.nextSibling) break;
+                                    if(!lCurrent.nextSibling) break;
                                     
-                                    lCurrentFile = lCurrentFile.nextSibling;
+                                    lCurrent = lCurrent.nextSibling;
                                 }
-                                DOM.setCurrentFile(lCurrentFile);
+                                DOM.setCurrentFile(lCurrent);
                                 DOM.preventDefault(pEvent);
                                 break;
                             
@@ -258,7 +258,7 @@ var CloudCommander, Util, DOM;
                             case KEY.PAGE_UP:
                                 DOM.scrollByPages( DOM.getPanel(), -1 );
                                 
-                                var lC          = lCurrentFile,
+                                var lC          = lCurrent,
                                     tryCatch    = function(pCurrentFile){
                                         Util.tryCatch(function(){
                                             return pCurrentFile
@@ -285,7 +285,7 @@ var CloudCommander, Util, DOM;
                             
                             case KEY.A:
                                 if(pEvent.ctrlKey){
-                                    var lParent = lCurrentFile.parentElement,
+                                    var lParent = lCurrent.parentElement,
                                         lNodes = lParent.childNodes;
                                     
                                     /* not path and fm_header */
