@@ -73,6 +73,8 @@
     exports.fs.exists                       = exports.fs.exists || exports.path.exists,
     
     /* Needed Modules */
+    
+    /* we can not use librequare heare */
     exports.util        = Util              = require(LIBDIR + 'util'),
     
     exports.zlib        = zlib              = mrequire('zlib'),
@@ -107,10 +109,9 @@
     exports.ischanged                       = srvrequire('ischanged');
     exports.commander                       = srvrequire('commander');
     exports.minify                          = srvrequire('minify').Minify;
-    /*
-     * second initializing after all modules load, so global var is
-     * totally filled of all information that should know all modules
-     */
+    
+    /* second initializing after all modules load, so global var is   *
+     * totally filled of all information that should know all modules */
     global.cloudcmd.main            = exports;
     
     /**
