@@ -66,7 +66,7 @@
         if(lRet){
             var p   = pParams;
             
-            lRet    = Util.isContainStr(p.name, CloudFunc.FS);
+            lRet    = Util.isContainStrAtBegin(p.name, CloudFunc.FS);
             if( lRet)
                 onFS(pParams);
             else{
@@ -194,6 +194,11 @@
                     };
                     send(p);
                     break;
+                
+                case 'proxy':
+                    
+                    break;
+                    
                 case 'zip':
                     main.sendFile(pParams);
                     break;
@@ -264,10 +269,10 @@
                         var l               = lFiles,
                             lReadStream     = fs.createReadStream(l.from),
                             lWriteStream    = fs.createWriteStream(l.to),
+                            
                             lError          = function(pError){
                                 main.sendError(pParams, pError);
                             };
-                            
                             
                             lWriteStream.on('error', lError);
                             lReadStream.on('error', lError);
