@@ -15,7 +15,7 @@ Util = exports || {};
      * @param {object} pContext
      */
     Util.bind                   = function(pFunction, pContext){
-        var lRet = false;
+        var lRet;
         
         if( Util.isFunction(pFunction) )
             lRet = pFunction.bind(pContext);
@@ -876,6 +876,7 @@ Util = exports || {};
         
         return lRet;
     };
+    
     /**
      * stop timer
      * @pArg
@@ -888,6 +889,7 @@ Util = exports || {};
         
         return lRet;
     };
+    
     /** 
      * Gets current date in format yy.mm.dd hh:mm:ss
      */
